2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Return icons
	
2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Use right types for file times (#506494)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Don't return errors on EOF (#506493)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * mkinstalldirs: Added.
	Added mkinstalldirs to svn and EXTRA_DIST ase
	we now don't gettextize in autogen.

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * hal/ghaldrive.c:
        (_drive_get_description):
	Fix plus/minus utf8 string.
	Patch from Luca Ferretti.

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.0 ===

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.ac:
	Bump version to 0.1.0

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * autogen.sh:
	Don't run gettextize
	
        * programs/Makefile.am:
	dist gvfs-less

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/main.c:
	Fix translated "".
	
        * hal/ghaldrive.c:
	Encode +/- as utf8 c escapes

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require glib 2.15.0
	
2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsjobqueryinfo.c:
        * programs/gvfs-copy.c:
        * programs/gvfs-ls.c:
        * programs/gvfs-move.c:
        * test/benchmark-gvfs-big-files.c:
        * test/benchmark-gvfs-small-files.c:
	Update to new file attribute names

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        * hal/ghaldrive.c:
        * hal/ghalmount.c: